--- a/index.html
+++ b/index.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/cssFiles/style.css" />
+    <!-- Fontawesome CDN Link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
     <title>Law Firm Agency</title>
   </head>
   <body>
+    <section class="amaroq">
+      <div class="left-side">
+        <div class="address details">
+          <i class="fas fa-map-marker-alt"></i>
+          <div class="topic">Address</div>
+          <div class="text-one">123, Law Firms street, <br> New Country</div>
+          <div class="text-two">info.lawfirm@gmail.com</div>
+        </div>
+        <div class="phone details">
+          <i class="fas fa-phone-alt"></i>
+          <div class="topic">Call or text us</div>
+          <div class="text-one">+123 456 789</div>
+          <div class="text-two">+987 654 321</div>
+        </div>
+        <div class="hours details">
+          <i class="fas fa-clock"></i>
+          <div class="topic">Hours</div>
+          <div class="text-one">Mon - Thur: 8am - 5pm</div>
+          <div class="text-two">Fri: 8am - 12pm</div>
+        </div>
+      </div>
+      <div class="right-side">
+        <div class="topic-text">Schedule your Family Law strategy session today!</div>
+        <p>Please complete the webform to schedule a Family Law consultation by phone, Skype or in person. We will respond shortly!</p>
+      <form action="#">
+        <div class="input-box">
+          <input type="text" placeholder="Enter your name">
+        </div>
+        <div class="input-box">
+          <input type="text" placeholder="Enter your email">
+        </div>
+        <div class="input-box message-box">
+          <textarea placeholder="Enter your message"></textarea>
+        </div>
+        <div class="button">
+          <input type="button" value="Send Now" >
+        </div>
+      </form>
+    </div>
+  </section>
     <script src="./assets/jsFiles/script.js"></script>
   </body>
 </html>
